# TopoFuse

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: emd0506.yaml  empiar10045.yaml  empiar10499.yaml  syn.yaml  topofuse_default.yaml
configs/ablations/: no_aux_loss.yaml  no_film.yaml  no_ph_descriptor.yaml  no_prior_loss.yaml  no_projection.yaml  no_topo_loss.yaml
data/: generate_syn.py
scripts/: collect_results.py  evaluate.py  generate_syn.sh  ingest_empiar.py  inspect_syn.py  make_figures.py  run_eval.sh  run_paper.sh  run_train.sh  setup_env.sh  train.py
tests/: test_ph.py  test_smoke.py
topofuse/: __init__.py
topofuse/data/: __init__.py  dataset.py
topofuse/evaluation/: __init__.py  metrics.py
topofuse/losses/: __init__.py  seg_losses.py  topo_losses.py  topo_projection.py
topofuse/models/: __init__.py  film_fusion.py  topofuse.py  topology_prior_head.py  triplanar_encoder.py
topofuse/topo/: __init__.py  descriptor.py  matching.py  ph.py  pseudo_diagram.py
topofuse/utils/: __init__.py  common.py
